# DevAutomator

./: .ccls  CMakeLists.txt  LICENSE  README.org  example.py  machine_lang.txt  pytest.ini  trans_example.py
include/: dict.h  dispatcher.hpp  external.hpp  general.h  instruction.h  instruction.hpp  interpreter.hpp  job.hpp  list.h  resource.hpp  runner.hpp  tcdb.h  tcdb.hpp  tcdb_connector.h  tcdb_connector.hpp  testCase.h  testCase.hpp  utility.hpp
include/DAL/: cond_insts.hpp  environment.hpp  instruction.hpp  oper_insts.hpp  var_insts.hpp
src/: dict.c  dispatcher.cc  interpreter.cc  list.c  runner.cc
src/instruction/: instruction.cc
src/lang/DevAuto/: __init__.py  devCore.py  lang_imp.py  machine_example.py  testCase.py  transFlags.py  utility.py
src/lang/DevAuto/Core/: __init__.py  devCore.py  devCoreExcep.py  devCoreTypes.py  devCustomTypes.py
src/lang/DevAuto/Translator/: ast_wrappers.py  transform.py  translator.py
src/lang/TestCases/CoreTestCases/: devCoreType_Check.py  devCore_Check.py
src/lang/TestCases/TranslatorTestCases/: trans_Check.py  wrapper_Check.py
src/tcdb/: tcdb.cc  tcdb_connector.cc  tcdb_connector.cpp  tcdb_drivers.c  tcdb_drivers.cc  tcdb_drivers.cpp  tcdb_drivers.h  tcdb_drivers.hpp
src/utility/: pyFuncEvaluate.cc
test/: dal_test.cc  dict_test.c  dispatcher_test.cc  interpreter_test.cc  list_test.c  runner_test.cc  tcdbConnector_test.cc  tcdbDriver_test.c  tcdbDriver_test.cc  tcdb_test.cc  test.c  utility_test.cc
